WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287552
[CSS-anchor-position-1] Fine-grained invalidation
https://bugs.webkit.org/show_bug.cgi?id=287552
Summary
[CSS-anchor-position-1] Fine-grained invalidation
Antti Koivisto
Reported
2025-02-12 01:55:52 PST
Invalidate anchored elements only when an anchor moves.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-12 01:56:29 PST
<
rdar://problem/144681624
>
Antti Koivisto
Comment 2
2025-02-12 03:00:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40476
EWS
Comment 3
2025-02-12 12:25:28 PST
Committed
290291@main
(5daa772e687c): <
https://commits.webkit.org/290291@main
> Reviewed commits have been landed. Closing PR #40476 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug