[CSS-anchor-position-1] Fine-grained invalidation https://bugs.webkit.org/show_bug.cgi?id=287552 rdar://144681624

Reviewed by Alan Baradlay.

Track when anchors move and invalidate anchored element style only when needed.
Before this we just invalidated all anchored elements unconditionally.

* LayoutTests/TestExpectations:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::resolveStyle):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::invalidateForAnchorRectChange):

Add a style invalidation function for this.

* Source/WebCore/dom/Element.h:
* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
(WebCore::LocalFrameViewLayoutContext::layout):
* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::AnchorPositionEvaluator::updateSnapshottedScrollOffsets):

Take care to also clear the offsets if they are not being applied.

(WebCore::Style::AnchorPositionEvaluator::makeAnchorPositionedForAnchorMap):

Make a reverse map.

* Source/WebCore/style/AnchorPositionEvaluator.h:
* Source/WebCore/style/StyleScope.cpp:
(WebCore::Style::Scope::invalidateForLayoutDependencies):
(WebCore::Style::Scope::invalidateForContainerDependencies):
(WebCore::Style::Scope::invalidateForAnchorDependencies):

Track the positions of anchors, invalidate if they have moved.

(WebCore::Style::Scope::resetAnchorPositioningStateBeforeStyleResolution):

Reset the transient state only.

(WebCore::Style::Scope::updateAchorPositioningStateAfterStyleResolution):

Update the snapshotted offsets.
Get rid of items that are not anchored anymore.

(WebCore::Style::Scope::updateQueryContainerState): Deleted.
(WebCore::Style::Scope::clearAnchorPositioningState): Deleted.
* Source/WebCore/style/StyleScope.h:
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::TreeResolver):
(WebCore::Style::TreeResolver::~TreeResolver):

Canonical link: https://commits.webkit.org/290291@main